# Goto-Frontend

./: .gitmodules  CMakeLists.txt  README.md
cmake/: AddTest.cmake
src/: .clang-format  CMakeLists.txt  main.cpp  pch.h
src/basic/: Allocator.h  AllocatorInternals.cpp  AllocatorInternals.h  CMakeLists.txt  CompileInfo.h  Debug.h  Engine.cpp  Engine.h  FileUtils.cpp  FileUtils.h  Indicator.h  IndicatorTable.h  SourceFile.h  SourceLocation.h  SourceTrace.h
src/cli/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  main.cpp
src/driver/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Driver.cpp  Driver.h  DriverOption.cpp  DriverOption.h  main.cpp
src/language/: CMakeLists.txt  ILexer.cpp  ILexer.h  Languages.h  Lexer.cpp  Lexer.h  LexerDirective.cpp  LexerDirective.h  LexerDirectiveIf.cpp  LexerDirectiveIf.h  Parser.cpp  Parser.h  Token.cpp  Token.h  TokenTable.cpp  TokenTable.h  TokenVerifier.cpp  TokenVerifier.h  Transform.cpp  Transform.h
src/language/C/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/parser/: CMakeLists.txt  Parser.cpp  Parser.h  TokenVerifier.cpp  TokenVerifier.h
test/: CMakeLists.txt
test/Driver/: CLIParserTest.cpp
tests/Driver/: CLIParserTest.cpp
